--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
+version: "3.9"
+
 services:
   app:
-    build: .
+    image: amelbdj/genealogie-app:v1
     container_name: genealogie_app
     ports:
       - "8080:80"
-    volumes:
-      - .:/var/www/html
     depends_on:
       - mongo
     networks:
